# sudo-code

./: .gitignore  CLAUDE.md  LAST_PARITY_SYNC_COMMIT  PARITY.md  PHILOSOPHY.md  README.md  REFACTORING_ANALYSIS.md  ROADMAP.md  USAGE.md
.github/workflows/: claude-code-review.yml  release.yml  rust-ci.yml
docs/: CHM_README.md  container.md  sandbox-exploration.md
reports/: upstream-analysis.md
rust/: .gitignore  CLAUDE.md  Cargo.toml  MOCK_PARITY_HARNESS.md  PARITY.md  README.md  TUI-ENHANCEMENT-PLAN.md  TUI-GAP-ANALYSIS.md
rust/crates/api/: Cargo.toml
rust/crates/api/benches/: request_building.rs
rust/crates/api/src/: client.rs  debug_dump.rs  error.rs  lib.rs  types.rs
rust/crates/api/src/providers/: anthropic.rs  codex.rs  gemini.rs  mod.rs  openai_compat.rs  registry.rs
rust/crates/api/tests/: client_integration.rs
rust/crates/commands/src/: lib.rs
rust/crates/compat-harness/src/: lib.rs
rust/crates/nexus-vfs-client/: Cargo.toml  build.rs
rust/crates/nexus-vfs-client/src/: lib.rs
rust/crates/plugins/src/: lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: acp_sdk_server.rs  acp_server.rs  acp_stdio_server.rs  acp_web_ui.html  acp_ws_server.rs  bash.rs  compact.rs  config.rs  config_validate.rs  conversation.rs  file_ops.rs  hooks.rs  image_registry.rs  lane_events.rs  lib.rs  mcp_server.rs  oauth.rs  permission_enforcer.rs  permissions.rs  prompt.rs  session.rs  session_control.rs  spawn_task.rs  stale_base.rs  sudocode.sample.json  worker_boot.rs
rust/crates/runtime/tests/: sandbox_escape_tests.rs
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: init.rs  input.rs  main.rs  render.rs
rust/crates/rusty-claude-cli/src/cli/: api_client.rs  args.rs  doctor.rs  export.rs  format.rs  git.rs  help.rs  mod.rs  session.rs  tool_executor.rs
rust/crates/rusty-claude-cli/tests/: cli_flags_and_config_defaults.rs  compact_output.rs  mock_parity_harness.rs  output_format_contract.rs
rust/crates/rusty-sudocode-cli/: Cargo.toml
rust/crates/rusty-sudocode-cli/src/: input.rs  main.rs
rust/crates/rusty-sudocode-cli/src/cli/: api_client.rs  args.rs  doctor.rs  export.rs  format.rs  help.rs  status.rs
rust/crates/rusty-sudocode-cli/tests/: acp_integration.rs  acp_live_smoke.rs  acp_regressions.rs  cli_flags_and_config_defaults.rs  output_format_contract.rs  resume_slash_commands.rs
rust/crates/telemetry/src/: lib.rs
rust/crates/tools/src/: lib.rs
rust/scripts/: chm_dashboard.md.tmpl  chm_maintenance_prompt.md  chm_report.sh  chm_scan.sh  chm_test.sh
tests/: sandbox_escape_test.sh
