[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
agent-client-protocol = { workspace = true }
agent-client-protocol-schema = { workspace = true }
agent-client-protocol-tokio = { workspace = true }
axum = { workspace = true }
sha2 = "0.10"
glob = "0.3"
keyring = "3"
plugins = { path = "../plugins" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
tower-http = { workspace = true }
walkdir = "2"

[lints]
workspace = true
