[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
agent-client-protocol = { workspace = true }
agent-client-protocol-schema = { workspace = true }
agent-client-protocol-tokio = { workspace = true }
async-trait = "0.1"
axum = { workspace = true }
base64 = "0.22"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
sha2 = "0.10"
glob = "0.3"
keyring = "3"
nexus-vfs-client = { path = "../nexus-vfs-client" }
plugins = { path = "../plugins" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
tower-http = { workspace = true }
walkdir = "2"

[lints]
workspace = true
